20070817
	two old changes that weren't in the distribution...
	libkeyring/rsaalg.c: previously failed to ensure the output key was the right length (really rsagen should do that)
	libinterp/alt.c: use a better random number generator
20070814
	bufio.b didn't update the buffer pointers correctly on write errors
20070807
	libinterp/keyring.c don't include owner= if owner is nil or ""
	add auth/rsagen
20070806
	/module/lists.m add PATH(!), also simplify concat implementation
20070725
	/dis/man initialise fils correctly to empty list and remove hack (issue 56)
20070720
	utils/5l/asm.c: ensure SBZ field in MOV is regarded as MBZ (ie, force to zero)
20070714
	add Sys->readn, update sys-read(2)
	copy two repairs from emu/port/inferno.c to os/port/inferno.c
	remove readn implementation from several commands
	print correct diagnostic in appl/cmd/crypt.b
	prevent window titlebars from being dragged out of the main window in wm/wm.b
20070619
	remembered to include /appl/cmd/trfs.b /dis/trfs.dis
20070614
	/appl/lib/venti.b bug fixes, a few more errstrs, remove prints to stderr
	add initial module/vac.m appl/lib/vac.b from mjl (gsoc project ventivac)
	add initial /appl/cmd/^(vacfs.b vacget.b vacput.b) /man/4/vacfs /man/1/vacget from mjl (gsoc:ventivac)
	include omitted man/mkfile man/lib
20070608
	update /lib9 functions to use silly va_copy (and then va_end) instead of just assigning, to account for silly C implementations
	change /appl/cmd/mc.b not to require Draw or Env (so lc works on smaller systems)
	update acme to include the font size data (eg, for use by mc(1))
20070607
	/appl/wm/man.b /appl/lib/man.b to allow 10.1 etc as section references
20070605
	add another xopen #define to lib9.h includes for Linux
	copy plan9 acme's colormix
20070601
	/appl/cmd/ls.b /dis/ls.dis /man/1/ls: document new -F option and -T option
	/appl/cmd/auth/factotum/factotum.b: ignore empty writes, don't fail; make a few diagnostics match plan 9